# Epoch_v3

./: .gitignore  CLAUDE.md  CXIIITradingSystemsEpoch_TestREADME.md  EPOCH_WORKFLOW_GUIDE.md  README.md  epoch_2_0_summary.txt  epoch_cell_map.yaml  epoch_sheet_cleaner.py  epoch_system_overview.md  epoch_v1.xlsm  excel_mapping.py  gen_metrics.py  git_commit.py  git_pull.py  git_reset.py  launcher.py  r_win_loss_metrics.py  requirements.txt  run_queries_temp.py
.claude/: launch.json
.zed/: settings.json  tasks.json
00_shared/: CLAUDE.md  README.md  __init__.py  pyproject.toml
00_shared/calculations/: __init__.py
00_shared/calculations/h1_supply_demand/: __init__.py  calculator.py
00_shared/calculations/h4_supply_demand/: __init__.py  calculator.py
00_shared/calculations/pdv/: __init__.py  calculator.py
00_shared/charts/: __init__.py  branding.py  colors.py  plotly_template.py
00_shared/config/: __init__.py  epoch_config.py  market_config.py
00_shared/data/: __init__.py
00_shared/data/polygon/: __init__.py  client.py
00_shared/data/supabase/: __init__.py  client.py
00_shared/indicators/: __init__.py  _utils.py  config.py  types.py
00_shared/indicators/core/: __init__.py  atr.py  candle_range.py  cvd.py  sma.py  volume_delta.py  volume_profile.py  volume_roc.py  vwap.py
00_shared/indicators/health/: __init__.py  health_score.py
00_shared/indicators/structure/: __init__.py  market_structure.py
00_shared/ui/: __init__.py  base_window.py  styles.py
01_application/: 01_application_improvement_v2.md  CLAUDE.md  README.md  app.py  config.py  debug_poc_filter.py  visualization_config.py  weights.py
02_dow_ai/: CLAUDE.md  RAMPUP_MIGRATION_GUIDE.txt  README.md  __init__.py  app.py
03_backtest/: CLAUDE.md  README.md  app.py  config.py
04_indicators/: CLAUDE.md  __init__.py  app.py  config.py  runner.py
05_system_analysis/: CLAUDE.md  __init__.py  app.py  config.py
06_training/: CLAUDE.md  README.md  __init__.py  app.py  config.py  requirements.txt  run_schema.py  streamlit_app.py
07_market_analysis/: CLAUDE.md  README.md
(+2533 files in other folders)
