[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epoch-shared"
version = "2.0.0"
description = "Shared infrastructure for Epoch Trading System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "PyQt6>=6.4.0",
    "plotly>=5.18.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "pandas-market-calendars>=4.3.0",
    "pydantic>=2.0.0",
    "anthropic>=0.18.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = [
    "shared",
    "shared.config",
    "shared.data",
    "shared.data.polygon",
    "shared.data.supabase",
    "shared.indicators",
    "shared.indicators.core",
    "shared.indicators.structure",
    "shared.indicators.health",
    "shared.models",
    "shared.ui",
    "shared.ui.widgets",
    "shared.ui.charts",
    "shared.utils",
    "shared.charts",
    "shared.calculations",
    "shared.calculations.pdv",
]

[tool.setuptools.package-dir]
shared = "."
